--- a/web/cdc/src/components/Employees/employees.module.css
+++ b/web/cdc/src/components/Employees/employees.module.css
@@ -628,3 +628,43 @@
     height: 50px;
     margin-right: 5.2%;
 }
+
+.listBlockControlPanel img {
+    width: 2rem;
+    height: 2rem;
+    padding-right: 5px;
+}
+
+.addUserForm {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    
+    align-items: right;
+
+    overflow: auto;
+    overflow-x: hidden;
+    
+}
+
+.addUserForm input, .listBlock button{
+    display: flex;
+    width: 80%;
+    height: 4.5rem;
+    justify-content: center;
+    align-items: center;
+    padding-left: 10px;
+    margin-top: 10px;
+    border-radius: 10px;
+    border: 2px solid #000;
+    background: none;
+
+    color: #000;
+    font-family: 'Inter', sans-serif;
+    font-size: 2rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    
+}
