--- a/web/cdc/src/components/Header/header.module.css
+++ b/web/cdc/src/components/Header/header.module.css
@@ -73,6 +73,8 @@
 .headerMenuObtaining nav a {
     color: #000;
 
+    height: 4rem;
+
     text-align: center;
     font-family: 'Inter', sans-serif;
     font-size: 2.4rem;
@@ -80,5 +82,33 @@
     font-weight: 500;
     line-height: normal;
 
+    position: relative;
+
     width: auto;
+}
+
+.headerMenuObtaining nav a {
+    transition: 0.3s;
+    overflow: hidden;
+}
+
+.headerMenuObtaining nav a::after {
+    content: '';
+    position: absolute;
+    bottom: 10px;
+    left: 0;
+    top: 3rem;
+    width: 100%;
+    height: 0.3rem;
+    background-color: #faa73e;
+    opacity: 0;
+    transition: opacity 300ms, transform 300ms;
+    transform: translate3d(-100%, 0, 0);
+    overflow: hidden;
+}
+
+.headerMenuObtaining nav a:hover::after,
+.headerMenuObtaining nav a:focus::after {
+  opacity: 1;
+  transform: translate3d(0, 0, 0);
 }
