--- a/web/cdc/src/components/Employees/employees.module.css
+++ b/web/cdc/src/components/Employees/employees.module.css
@@ -31,7 +31,7 @@
 .blocksObtaining {
     display: flex;
     width: 100%;
-    height: 765px;
+    height: 870px;
     padding: 20px 0px;
     justify-content: space-between;
     align-items: flex-start;
@@ -41,7 +41,7 @@
 .menuListBlock {
     display: flex;
     width: 24.7%;
-    height: 675px;
+    height: 800px;
     padding: 35px 4.5rem;
     flex-direction: column;
     align-items: flex-start;
@@ -54,9 +54,9 @@
 .menuListBlockMenu {
     display: flex;
     width: 100%;
-    height: 240px;
+    height: 220px;
     flex-direction: column;
-    gap: 10px;
+    gap: 5px;
     align-items: flex-start;
 }
 
@@ -66,7 +66,7 @@
     height: 40px;
     align-items: center;
     /* justify-content: space-between; */
-    gap: 10px;
+    gap: 5px;
 }
 
 .menuAddName button {
@@ -96,7 +96,7 @@
     height: 36px;
     padding: 0 10px;
     align-items: center;
-    gap: 10px;
+    gap: 5px;
 
     border-radius: 10px;
     border: 2px solid #000;
@@ -110,7 +110,7 @@
     padding: 0;
 
     font-family: 'Inter', sans-serif;
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-style: normal;
     font-weight: 300;
     line-height: normal;
@@ -139,8 +139,8 @@
 .columnsCol {
     display: flex;
     flex-direction: column;
-    width: 48.837%;
-    gap: 10px;    
+    width: 49.418%;
+    gap: 5px;    
 }
 
 .columnsCol select {
@@ -160,7 +160,7 @@
 
     text-align: center;
     font-family: 'Inter', sans-serif;
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
@@ -172,7 +172,7 @@
     height: 36px;
     padding: 0 10px;
     align-items: center;
-    gap: 10px;
+    gap: 5px;
     flex-shrink: 0;
     border-radius: 10px;
     border: 2px solid #000;
@@ -186,7 +186,7 @@
     padding: 0;
 
     font-family: 'Inter', sans-serif;
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-style: normal;
     font-weight: 300;
     line-height: normal;
@@ -214,7 +214,7 @@
     height: 36px;
     padding: 0 10px;
     align-items: center;
-    gap: 10px;
+    gap: 5px;
 
     border-radius: 10px;
     border: 2px solid #000;
@@ -228,7 +228,7 @@
     padding: 0;
 
     font-family: 'Inter', sans-serif;
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-style: normal;
     font-weight: 300;
     line-height: normal;
@@ -266,7 +266,7 @@
     color: #000;
 
     font-family: 'Inter', sans-serif;
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
@@ -275,8 +275,8 @@
 .menuListBlockList {
     display: flex;
     width: 94.165%;
-    height: 405px;
-    padding-right: 25px;
+    height: 560px;
+    padding-right: 2rem;
     margin: 0;
     flex-direction: column;
     align-items: flex-start;
@@ -289,8 +289,9 @@
 .menuListBlockList li {
     display: flex;
     width: 100%;
-    height: 90px;
-    /* padding: 5px 10px; */
+    height: 40px;
+    padding-top: 5px;
+    padding-bottom: 5px;
     justify-content: space-around;
     align-items: center;
     flex-shrink: 0;
@@ -300,8 +301,8 @@
 
 .listLiInfo {
     display: flex;
-    width: 85.365%;
-    height: 75px;
+    width: 92.683%;
+    height: 40px;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
@@ -327,7 +328,7 @@
 .listLiInfoName {
     color: #000;
     font-family: 'Inter', sans-serif;
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-style: normal;
     font-weight: 300;
     line-height: normal;
@@ -338,51 +339,44 @@
 
 .listLiInfoRoleProj {
     display: flex;
-    width: 95.714%;
-    height: 45px;
-    padding-left: 0px;
+    flex-direction: row;
+    width: 100%;
+    height: 18px;
+    gap: 10px; 
     align-items: flex-start;
 }
 
-.listLiInfoRoleProjTitles {
+.listLiInfoRoleProjRoleBox {
     display: flex;
-    width: 20%;
-    height: 40px;
-    padding-left: 15px;
-    flex-direction: column;
+    width: 42.105%;
+    height: 18px;
+    margin-left: 5px;
     align-items: flex-start;
+    gap: 5px;
     flex-shrink: 0;
 }
 
-.listLiInfoRoleProjTitles div {
+.listLiInfoRoleProjRoleBox p, .listLiInfoRoleProjProjBox p {
+    margin: 0;
+
     display: flex;
-    height: 20px;
+    height: 18px;
     flex-direction: column;
     justify-content: center;
-    flex-shrink: 0;
+    
     color: #000;
 
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-size: 1.6rem;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
 }
 
-.listLiInfoRoleProjBox {
+.roleProjRoleBoxRole {
     display: flex;
-    width: 80%;
-    height: 40px;
-    padding-left: 15px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-}
-
-.roleProjBoxRole, .roleProjBoxProject {
-    display: flex;
-    width: 100%;
-    height: 20px;
+    width: 70%;
+    height: 18px;
     flex-direction: column;
     justify-content: center;
     flex-shrink: 0;
@@ -398,11 +392,34 @@
     white-space: nowrap;
 }
 
+.listLiInfoRoleProjProjBox {
+    display: flex;
+    width: 53.947%;
+    height: 18px;
+    align-items: center;
+    gap: 5px;
+}
+
+.roleProjRojBoxProj {
+    display: flex;
+    width: 66.83%;
+    height: 15px;
+    flex-direction: column;
+    justify-content: center;
+    flex-shrink: 0;
+    color: #000;
+    
+    font-family: 'Inter', sans-serif;
+    font-size: 1.6rem;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+}
 
 .infoBlocks {
     display: flex;
     width: 66.47%;
-    height: 745px;
+    height: 870px;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
@@ -411,7 +428,7 @@
 .mainBlock {
     display: flex;
     width: 92.035%;
-    height: 285px;
+    height: 345px;
     padding: 35px 4.5rem;
     flex-direction: row;
     align-items: flex-start;
@@ -424,8 +441,8 @@
 
 .mainBlockLPart {
     display: flex;
-    width: 75.961%;
-    height: 285px;
+    width: 72.116%;
+    height: 345px;
     flex-direction: column;
     align-items: flex-start;
     gap: 10px;
@@ -448,7 +465,7 @@
     color: #000;
 
     font-family: 'Inter', sans-serif;
-    font-size: 3.2rem;
+    font-size: 3rem;
     font-style: normal;
     font-weight: 600;
     line-height: normal;
@@ -463,7 +480,7 @@
     color: #000;
 
     font-family: 'Inter', sans-serif;
-    font-size: 2.4rem;
+    font-size: 2rem;
     font-style: normal;
     font-weight: 300;
     line-height: normal;
@@ -471,17 +488,17 @@
 
 .lPartInfo {
     display: flex;
-    width: calc(100% - 15px);
+    width: 100%;
     margin-left: 5px;
-    height: 235px;
+    height: 295px;
     align-items: flex-start;
 }
 
 .lPartInfoCol1Title {
     display: flex;
-    width: 13.7%;
+    width: 22%;
     height: 100%;
-    padding-left: 0px;
+    margin-left: 5px;
     flex-direction: column;
     justify-content: space-between;
     align-items: flex-start;
@@ -491,7 +508,7 @@
     margin: 0;
 
     display: flex;
-    height: 30px;
+    min-height: 30px;
     flex-direction: column;
     justify-content: center;
     flex-shrink: 0;
@@ -500,14 +517,15 @@
     font-family: 'Inter', sans-serif;
     font-size: 2rem;
     font-style: normal;
-    font-weight: 600;
+    font-weight: 400;
     line-height: normal;
 }
 
 .lPartInfoCol1Data {
     display: flex;
-    width: 32.258%;
+    width: 26.666%;
     height: 100%;
+    margin-left: 10px;
     flex-direction: column;
     justify-content: space-between;
     align-items: flex-start;
@@ -523,7 +541,7 @@
     color: #000;
     
     font-family: 'Inter', sans-serif;
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-style: normal;
     font-weight: 300;
     line-height: normal;
@@ -534,8 +552,9 @@
 
 .lPartInfoCol2Title {
     display: flex;
-    width: 23.645%;
+    width: 19.333%;
     height: 100%;
+    margin-left: 10px;
     flex-direction: column;
     align-items: flex-start;
     justify-content: space-between;
@@ -545,7 +564,7 @@
     margin: 0;
 
     display: flex;
-    height: 30px;
+    min-height: 30px;
     flex-direction: column;
     justify-content: center;
     flex-shrink: 0;
@@ -554,15 +573,15 @@
     font-family: 'Inter', sans-serif;
     font-size: 2rem;
     font-style: normal;
-    font-weight: 600;
+    font-weight: 400;
     line-height: normal;
 }
 
-.lPartInfoCol2TitleDoB {
+.lPartInfoCol2TitlePrOwn {
     margin: 0;
 
     display: flex;
-    height: 31.617%;
+    height: 140px;
     flex-direction: column;
     justify-content: flex-start;
     flex-shrink: 0;
@@ -571,20 +590,21 @@
     font-family: 'Inter', sans-serif;
     font-size: 2rem;
     font-style: normal;
-    font-weight: 600;
+    font-weight: 400;
     line-height: normal;
 }
 
 .lPartInfoCol2Data {
     display: flex;
-    width: 29.677%;
-    height: 235px;
+    width: 26%;
+    height: 100%;
+    margin-left: 10px;
     flex-direction: column;
     align-items: flex-start;
     justify-content: space-between;
 }
 
-.lPartInfoCol2DataPhoneNum, .lPartInfoCol2DataSeprvisor, .lPartInfoCol2DataDoB {
+.lPartInfoCol2DataPhoneNum, .lPartInfoCol2DataConnected, .lPartInfoCol2DataSeprvisor, .lPartInfoCol2DataDoB {
     display: flex;
     width: 100%;
     height: 30px;
@@ -594,7 +614,7 @@
     color: #000;
     
     font-family: 'Inter', sans-serif;
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-style: normal;
     font-weight: 300;
     line-height: normal;
@@ -607,11 +627,11 @@
     margin: 0;
 
     display: flex;
-    width: 91.3%;
-    height: 33.617%;
+    width: 95.238%;
+    height: 140px;
     flex-direction: column;
     align-items: flex-start;
-    padding-right: 20px;
+    padding-right: 1rem;
 
     overflow: scroll;
     overflow-x: hidden;
@@ -638,7 +658,7 @@
 
     text-align: left;
     font-family: 'Inter', sans-serif;
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-style: normal;
     font-weight: 300;
     line-height: normal;
@@ -650,23 +670,25 @@
 
 .mainBlockRPart {
     display: flex;
-    width: 21.1538%;
+    width: 26.442%;
     height: 100%;
     flex-direction: column;
-    justify-content: space-between;
     align-items: center;
+    position: relative;
 }
 
 .rPartInfo {
     display: flex;
     width: 100%;
-    height: 28.07%;
+    height: 255px;
+    gap: 21px;
     flex-direction: column;
-    justify-content: space-between;
     align-items: flex-start;
+    position: absolute;
+    top: 0;
 }
 
-.rPartInfoActivity, .rPartInfoConnected {
+.rPartInfoActivity, .rPartInfoConnected, .rPartInfoFired {
     display: flex;
     width: 100%;
     height: 30px;
@@ -674,13 +696,13 @@
     align-items: center;
 }
 
-.rPartInfoActivity p, .rPartInfoConnected p {
+.rPartInfoActivity p, .rPartInfoConnected p, .rPartInfoFired p, .rPartInfoReason p {
     margin: 0;
 
     color: #000;
 
     font-family: 'Inter', sans-serif;
-    font-size: 2.4rem;
+    font-size: 2rem;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
@@ -694,29 +716,56 @@
     background: #00CA4E;
 }
 
-.connectedDate {
+.connectedDate, .firedDate {
     color: #000;
 
     font-family: 'Inter', sans-serif;
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-style: normal;
     font-weight: 300;
     line-height: normal;
 }
 
+.rPartInfoReason {
+    display: flex;
+    width: 100%;
+    height: 100px;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+.reason {
+    color: #000;
+
+    max-width: 60%;
+    height: 100px;
+    padding-right: 1rem;
+
+    font-family: 'Inter', sans-serif;
+    font-size: 1.8rem;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+
+    overflow: scroll;
+    overflow-x: hidden;
+}
+
 .rPartButtons {
     display: flex;
     width: 100%;
-    height: 57.9%;
+    height: 175px;
+    gap: 5px;
     flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
+    justify-content: flex-end;
+    position: absolute;
+    bottom: 0;
 }
 
 .buttonTeamsGroups, .buttonMentorship {
     display: flex;
     width: 100%;
-    height: 45px;
+    height: 40px;
     justify-content: center;
     align-items: center;
     gap: 10px;
@@ -752,7 +801,7 @@
 .buttonEdit {
     display: flex;
     width: 100%;
-    height: 45px;
+    height: 40px;
     justify-content: center;
     align-items: center;
 
@@ -781,7 +830,7 @@
 .lowerBlocks {
     display: flex;
     width: 100%;
-    height: 340px;
+    height: 405px;
     align-items: center;
     justify-content: space-between;
     flex-shrink: 0;
@@ -790,7 +839,7 @@
 .teamGroupsBlock {
     display: flex;
     width: 39.823%;
-    height: 79.411%;
+    height: 335px;
     padding: 35px 4.5rem;
     flex-direction: row;
     justify-content: space-between;
@@ -822,7 +871,7 @@
     color: #000;
     
     font-family: 'Inter', sans-serif;
-    font-size: 2.4rem;
+    font-size: 2rem;
     font-style: normal;
     font-weight: 600;
     line-height: normal;
@@ -838,7 +887,7 @@
     color: #000;
     
     font-family: 'Inter', sans-serif;
-    font-size: 2.4rem;
+    font-size: 2rem;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
@@ -863,7 +912,7 @@
     color: #000;
     
     font-family: 'Inter', sans-serif;
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-style: normal;
     font-weight: 300;
     line-height: normal;
@@ -875,7 +924,7 @@
 .teamGroupsBlockDataGroups {
     display: flex;
     width: 93.65%;
-    height: 180px;
+    height: 245px;
     margin: 0;
     padding-right: 2rem;
     flex-direction: column;
@@ -926,7 +975,7 @@
     color: #000;
 
     font-family: 'Inter', sans-serif;
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-style: normal;
     font-weight: 300;
     line-height: normal;
@@ -938,7 +987,7 @@
 .mentorshipBlock {
     display: flex;
     width: 39.823%;
-    height: 79.411%;
+    height: 335px;
     padding: 35px 4.5rem;
     flex-direction: column;
     align-items: flex-start;
@@ -960,7 +1009,7 @@
     color: #000;
     
     font-family: 'Inter', sans-serif;
-    font-size: 2.4rem;
+    font-size: 2rem;
     font-style: normal;
     font-weight: 600;
     line-height: normal;
@@ -969,6 +1018,7 @@
 .teamGroupsBlockInfo {
     display: flex;
     width: 100%;
+    height: 290px;
     justify-content: space-between;
     align-items: flex-start;
 }
@@ -976,7 +1026,7 @@
 .teamGroupsBlockInfoTitles {
     display: flex;
     width: 22.222%;
-    height: 225px;
+    height: 290px;
     margin-left: 1.5rem;
     flex-direction: column;
     align-items: flex-start;
@@ -995,7 +1045,7 @@
     color: #000;
     
     font-family: 'Inter', sans-serif;
-    font-size: 2.4rem;
+    font-size: 2rem;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
@@ -1018,7 +1068,7 @@
     color: #000;
     
     font-family: 'Inter', sans-serif;
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-style: normal;
     font-weight: 300;
     line-height: normal;
@@ -1032,7 +1082,7 @@
     flex-direction: column;
     align-items: flex-start;
     width: 93.65%;
-    height: 180px;
+    height: 245px;
 
     margin: 0;
     padding-right: 2rem;
@@ -1061,7 +1111,7 @@
     color: #000;
 
     font-family: 'Inter', sans-serif;
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-style: normal;
     font-weight: 300;
     line-height: normal;
