--- a/web/cdc/src/components/Employees/employees.module.css
+++ b/web/cdc/src/components/Employees/employees.module.css
@@ -1070,6 +1070,93 @@
     white-space: nowrap;
 }
 
+.popUp {
+    width: 300px;
+    height: 140px;
+    padding: 35px 4.5rem;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: space-between;
+    gap: 15px;
+    flex-shrink: 0;
+    border-radius: 30px;
+    border: 3px solid #000;
+    background-color: #FFFFFF;
+}
+
+.popUpContent {
+    display: flex;
+    width: 100%;
+    height: 95%;
+    flex-direction: column;
+    justify-content: center;
+    flex-shrink: 0;
+    gap: 15px;
+    color: #000;
+
+    font-family: 'Inter', sans-serif;
+    font-size: 2.5rem;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+.popUpContent form {
+    display: flex;
+    /* width: 100%; */
+    height: 36px;
+    padding: 0 10px;
+    align-items: center;
+    gap: 10px;
+    flex-shrink: 0;
+    border-radius: 10px;
+    border: 2px solid #000;
+}
+
+.popUpContent form input {
+    width: 100%;
+    height: 32px;
+    border: none;
+    outline: none;
+    padding: 0;
+
+    font-family: 'Inter', sans-serif;
+    font-size: 2rem;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+}
+
+.popUpButtons {
+    display: flex;
+    width: 100%;
+    height: 40px;
+    flex-direction: row;
+    gap: 15px;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.popUpButtons button {
+    display: flex;
+    cursor: pointer;
+    width: 50%;
+    height: 40px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+
+    background: none;
+    border-radius: 10px;
+    border: 2px solid #000;
+
+    transition: all 0.15s ease;
+}
+
 /* footer section */
 
 .wrapperFooterContainer {
