--- a/web/cdc/src/components/Employees/employees.module.css
+++ b/web/cdc/src/components/Employees/employees.module.css
@@ -31,8 +31,8 @@
 .blocksObtaining {
     display: flex;
     width: 100%;
-    height: 765px;
-    padding: 20px 0px;
+    height: 870px;
+    padding: 15px 0px;
     justify-content: space-between;
     align-items: flex-start;
     flex-shrink: 0;
@@ -41,8 +41,8 @@
 .menuListBlock {
     display: flex;
     width: 24.7%;
-    height: 675px;
-    padding: 35px 4.5rem;
+    height: 815px;
+    padding: 25px 4.5rem;
     flex-direction: column;
     align-items: flex-start;
     justify-content: space-between;
@@ -54,9 +54,9 @@
 .menuListBlockMenu {
     display: flex;
     width: 100%;
-    height: 240px;
+    height: 220px;
     flex-direction: column;
-    gap: 10px;
+    gap: 5px;
     align-items: flex-start;
 }
 
@@ -66,7 +66,7 @@
     height: 40px;
     align-items: center;
     /* justify-content: space-between; */
-    gap: 10px;
+    gap: 5px;
 }
 
 .menuAddName button {
@@ -76,6 +76,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
 
     padding: 0;
 
@@ -95,7 +96,7 @@
     height: 36px;
     padding: 0 10px;
     align-items: center;
-    gap: 10px;
+    gap: 5px;
 
     border-radius: 10px;
     border: 2px solid #000;
@@ -109,7 +110,7 @@
     padding: 0;
 
     font-family: 'Inter', sans-serif;
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-style: normal;
     font-weight: 300;
     line-height: normal;
@@ -138,8 +139,8 @@
 .columnsCol {
     display: flex;
     flex-direction: column;
-    width: 48.837%;
-    gap: 10px;    
+    width: 49.418%;
+    gap: 5px;    
 }
 
 .columnsCol select {
@@ -150,6 +151,7 @@
     align-items: center;
     gap: 10px;
     flex-shrink: 0;
+    cursor: pointer;
 
     border-radius: 10px;
     border: 2px solid #000;
@@ -158,7 +160,7 @@
 
     text-align: center;
     font-family: 'Inter', sans-serif;
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
@@ -170,7 +172,7 @@
     height: 36px;
     padding: 0 10px;
     align-items: center;
-    gap: 10px;
+    gap: 5px;
     flex-shrink: 0;
     border-radius: 10px;
     border: 2px solid #000;
@@ -184,7 +186,7 @@
     padding: 0;
 
     font-family: 'Inter', sans-serif;
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-style: normal;
     font-weight: 300;
     line-height: normal;
@@ -198,6 +200,7 @@
     justify-content: center;
     border: none;
     background: none;
+    cursor: pointer;
 }
 
 .columnsCol form button img {
@@ -211,7 +214,7 @@
     height: 36px;
     padding: 0 10px;
     align-items: center;
-    gap: 10px;
+    gap: 5px;
 
     border-radius: 10px;
     border: 2px solid #000;
@@ -225,7 +228,7 @@
     padding: 0;
 
     font-family: 'Inter', sans-serif;
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-style: normal;
     font-weight: 300;
     line-height: normal;
@@ -239,6 +242,7 @@
     justify-content: center;
     border: none;
     background: none;
+    cursor: pointer;
 }
 
 .menuSupervisor button img {
@@ -253,6 +257,7 @@
     justify-content: center;
     align-items: center;
     flex-shrink: 0;
+    cursor: pointer;
 
     border-radius: 10px;
     border: 2px solid #000;
@@ -261,7 +266,7 @@
     color: #000;
 
     font-family: 'Inter', sans-serif;
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
@@ -270,8 +275,8 @@
 .menuListBlockList {
     display: flex;
     width: 94.165%;
-    height: 405px;
-    padding-right: 25px;
+    height: 570px;
+    padding-right: 2rem;
     margin: 0;
     flex-direction: column;
     align-items: flex-start;
@@ -284,8 +289,9 @@
 .menuListBlockList li {
     display: flex;
     width: 100%;
-    height: 90px;
-    /* padding: 5px 10px; */
+    height: 40px;
+    padding-top: 5px;
+    padding-bottom: 5px;
     justify-content: space-around;
     align-items: center;
     flex-shrink: 0;
@@ -295,11 +301,12 @@
 
 .listLiInfo {
     display: flex;
-    width: 85.365%;
-    height: 75px;
+    width: 92.683%;
+    height: 40px;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
+    cursor:pointer;
 }
 
 .menuListBlockList li button {
@@ -321,7 +328,7 @@
 .listLiInfoName {
     color: #000;
     font-family: 'Inter', sans-serif;
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-style: normal;
     font-weight: 300;
     line-height: normal;
@@ -332,51 +339,44 @@
 
 .listLiInfoRoleProj {
     display: flex;
-    width: 95.714%;
-    height: 45px;
-    padding-left: 0px;
+    flex-direction: row;
+    width: 100%;
+    height: 18px;
+    gap: 15px;
     align-items: flex-start;
 }
 
-.listLiInfoRoleProjTitles {
+.listLiInfoRoleProjRoleBox {
     display: flex;
-    width: 20%;
-    height: 40px;
-    padding-left: 15px;
-    flex-direction: column;
+    width: 42.105%;
+    height: 18px;
+    margin-left: 3px;
     align-items: flex-start;
+    gap: 5px;
     flex-shrink: 0;
 }
 
-.listLiInfoRoleProjTitles div {
+.listLiInfoRoleProjRoleBox p, .listLiInfoRoleProjProjBox p {
+    margin: 0;
+
     display: flex;
-    height: 20px;
+    height: 18px;
     flex-direction: column;
     justify-content: center;
-    flex-shrink: 0;
+    
     color: #000;
 
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-size: 1.6rem;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
 }
 
-.listLiInfoRoleProjBox {
+.roleProjRoleBoxRole {
     display: flex;
-    width: 80%;
-    height: 40px;
-    padding-left: 15px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-}
-
-.roleProjBoxRole, .roleProjBoxProject {
-    display: flex;
-    width: 100%;
-    height: 20px;
+    width: 70%;
+    height: 18px;
     flex-direction: column;
     justify-content: center;
     flex-shrink: 0;
@@ -392,11 +392,34 @@
     white-space: nowrap;
 }
 
+.listLiInfoRoleProjProjBox {
+    display: flex;
+    width: 53.947%;
+    height: 18px;
+    align-items: center;
+    gap: 5px;
+}
+
+.roleProjRojBoxProj {
+    display: flex;
+    width: 66.83%;
+    height: 15px;
+    flex-direction: column;
+    justify-content: center;
+    flex-shrink: 0;
+    color: #000;
+    
+    font-family: 'Inter', sans-serif;
+    font-size: 1.6rem;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+}
 
 .infoBlocks {
     display: flex;
     width: 66.47%;
-    height: 745px;
+    height: 870px;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
@@ -405,7 +428,7 @@
 .mainBlock {
     display: flex;
     width: 92.035%;
-    height: 285px;
+    height: 345px;
     padding: 35px 4.5rem;
     flex-direction: row;
     align-items: flex-start;
@@ -418,8 +441,8 @@
 
 .mainBlockLPart {
     display: flex;
-    width: 75.961%;
-    height: 285px;
+    width: 72.116%;
+    height: 345px;
     flex-direction: column;
     align-items: flex-start;
     gap: 10px;
@@ -442,7 +465,7 @@
     color: #000;
 
     font-family: 'Inter', sans-serif;
-    font-size: 3.2rem;
+    font-size: 3rem;
     font-style: normal;
     font-weight: 600;
     line-height: normal;
@@ -457,7 +480,7 @@
     color: #000;
 
     font-family: 'Inter', sans-serif;
-    font-size: 2.4rem;
+    font-size: 2rem;
     font-style: normal;
     font-weight: 300;
     line-height: normal;
@@ -465,17 +488,17 @@
 
 .lPartInfo {
     display: flex;
-    width: calc(100% - 15px);
-    margin-left: 15px;
-    height: 235px;
+    width: 100%;
+    margin-left: 5px;
+    height: 295px;
     align-items: flex-start;
 }
 
 .lPartInfoCol1Title {
     display: flex;
-    width: 17.419%;
+    width: 22%;
     height: 100%;
-    padding-left: 0px;
+    margin-left: 5px;
     flex-direction: column;
     justify-content: space-between;
     align-items: flex-start;
@@ -485,14 +508,14 @@
     margin: 0;
 
     display: flex;
-    height: 30px;
+    min-height: 30px;
     flex-direction: column;
     justify-content: center;
     flex-shrink: 0;
     color: #000;
     
     font-family: 'Inter', sans-serif;
-    font-size: 2.4rem;
+    font-size: 2rem;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
@@ -500,8 +523,9 @@
 
 .lPartInfoCol1Data {
     display: flex;
-    width: 32.258%;
+    width: 26.666%;
     height: 100%;
+    margin-left: 10px;
     flex-direction: column;
     justify-content: space-between;
     align-items: flex-start;
@@ -517,7 +541,7 @@
     color: #000;
     
     font-family: 'Inter', sans-serif;
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-style: normal;
     font-weight: 300;
     line-height: normal;
@@ -528,8 +552,9 @@
 
 .lPartInfoCol2Title {
     display: flex;
-    width: 20.645%;
+    width: 19.333%;
     height: 100%;
+    margin-left: 10px;
     flex-direction: column;
     align-items: flex-start;
     justify-content: space-between;
@@ -539,31 +564,31 @@
     margin: 0;
 
     display: flex;
-    height: 30px;
+    min-height: 30px;
     flex-direction: column;
     justify-content: center;
     flex-shrink: 0;
     color: #000;
     
     font-family: 'Inter', sans-serif;
-    font-size: 2.2rem;
+    font-size: 2rem;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
 }
 
-.lPartInfoCol2TitleDoB {
+.lPartInfoCol2TitlePrOwn {
     margin: 0;
 
     display: flex;
-    height: 33.617%;
+    height: 140px;
     flex-direction: column;
     justify-content: flex-start;
     flex-shrink: 0;
     color: #000;
     
     font-family: 'Inter', sans-serif;
-    font-size: 2.2rem;
+    font-size: 2rem;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
@@ -571,14 +596,15 @@
 
 .lPartInfoCol2Data {
     display: flex;
-    width: 29.677%;
-    height: 235px;
+    width: 26%;
+    height: 100%;
+    margin-left: 10px;
     flex-direction: column;
     align-items: flex-start;
     justify-content: space-between;
 }
 
-.lPartInfoCol2DataPhoneNum, .lPartInfoCol2DataSeprvisor, .lPartInfoCol2DataDoB {
+.lPartInfoCol2DataPhoneNum, .lPartInfoCol2DataConnected, .lPartInfoCol2DataSeprvisor, .lPartInfoCol2DataDoB {
     display: flex;
     width: 100%;
     height: 30px;
@@ -588,7 +614,7 @@
     color: #000;
     
     font-family: 'Inter', sans-serif;
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-style: normal;
     font-weight: 300;
     line-height: normal;
@@ -601,11 +627,11 @@
     margin: 0;
 
     display: flex;
-    width: 91.3%;
-    height: 33.617%;
+    width: 95.238%;
+    height: 140px;
     flex-direction: column;
     align-items: flex-start;
-    padding-right: 20px;
+    padding-right: 1rem;
 
     overflow: scroll;
     overflow-x: hidden;
@@ -632,7 +658,7 @@
 
     text-align: left;
     font-family: 'Inter', sans-serif;
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-style: normal;
     font-weight: 300;
     line-height: normal;
@@ -644,23 +670,25 @@
 
 .mainBlockRPart {
     display: flex;
-    width: 21.1538%;
+    width: 26.442%;
     height: 100%;
     flex-direction: column;
-    justify-content: space-between;
     align-items: center;
+    position: relative;
 }
 
 .rPartInfo {
     display: flex;
     width: 100%;
-    height: 28.07%;
+    height: 255px;
+    gap: 21px;
     flex-direction: column;
-    justify-content: space-between;
     align-items: flex-start;
+    position: absolute;
+    top: 0;
 }
 
-.rPartInfoActivity, .rPartInfoConnected {
+.rPartInfoActivity, .rPartInfoConnected, .rPartInfoFired {
     display: flex;
     width: 100%;
     height: 30px;
@@ -668,13 +696,13 @@
     align-items: center;
 }
 
-.rPartInfoActivity p, .rPartInfoConnected p {
+.rPartInfoActivity p, .rPartInfoConnected p, .rPartInfoFired p, .rPartInfoReason p {
     margin: 0;
 
     color: #000;
 
     font-family: 'Inter', sans-serif;
-    font-size: 2.4rem;
+    font-size: 2rem;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
@@ -688,29 +716,56 @@
     background: #00CA4E;
 }
 
-.connectedDate {
+.connectedDate, .firedDate {
     color: #000;
 
     font-family: 'Inter', sans-serif;
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-style: normal;
     font-weight: 300;
     line-height: normal;
 }
 
+.rPartInfoReason {
+    display: flex;
+    width: 100%;
+    height: 100px;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+.reason {
+    color: #000;
+
+    max-width: 60%;
+    height: 100px;
+    padding-right: 1rem;
+
+    font-family: 'Inter', sans-serif;
+    font-size: 1.8rem;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+
+    overflow: scroll;
+    overflow-x: hidden;
+}
+
 .rPartButtons {
     display: flex;
     width: 100%;
-    height: 57.9%;
+    height: 175px;
+    gap: 5px;
     flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
+    justify-content: flex-end;
+    position: absolute;
+    bottom: 0;
 }
 
 .buttonTeamsGroups, .buttonMentorship {
     display: flex;
     width: 100%;
-    height: 45px;
+    height: 40px;
     justify-content: center;
     align-items: center;
     gap: 10px;
@@ -718,6 +773,12 @@
     background: none;
     border-radius: 10px;
     border: 2px solid #000;
+
+    transition: all 0.15s ease; 
+}
+
+.buttonTeamsGroups:hover, .buttonMentorship:hover {
+    box-shadow: 0 0 5px 1px #808080;
 }
 
 .buttonTeamsGroups img, .buttonMentorship img {
@@ -740,7 +801,7 @@
 .buttonEdit {
     display: flex;
     width: 100%;
-    height: 45px;
+    height: 40px;
     justify-content: center;
     align-items: center;
 
@@ -755,6 +816,12 @@
     background: none;
     border-radius: 10px;
     border: 2px solid #000;
+    
+    transition: all 0.15s ease; 
+}
+
+.buttonEdit:hover {
+    box-shadow: 0 0 5px 1px #808080;
 }
 
 
@@ -763,7 +830,7 @@
 .lowerBlocks {
     display: flex;
     width: 100%;
-    height: 340px;
+    height: 405px;
     align-items: center;
     justify-content: space-between;
     flex-shrink: 0;
@@ -772,7 +839,7 @@
 .teamGroupsBlock {
     display: flex;
     width: 39.823%;
-    height: 79.411%;
+    height: 335px;
     padding: 35px 4.5rem;
     flex-direction: row;
     justify-content: space-between;
@@ -804,7 +871,7 @@
     color: #000;
     
     font-family: 'Inter', sans-serif;
-    font-size: 2.4rem;
+    font-size: 2rem;
     font-style: normal;
     font-weight: 600;
     line-height: normal;
@@ -820,7 +887,7 @@
     color: #000;
     
     font-family: 'Inter', sans-serif;
-    font-size: 2.4rem;
+    font-size: 2rem;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
@@ -845,7 +912,7 @@
     color: #000;
     
     font-family: 'Inter', sans-serif;
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-style: normal;
     font-weight: 300;
     line-height: normal;
@@ -857,7 +924,7 @@
 .teamGroupsBlockDataGroups {
     display: flex;
     width: 93.65%;
-    height: 180px;
+    height: 245px;
     margin: 0;
     padding-right: 2rem;
     flex-direction: column;
@@ -865,7 +932,7 @@
     align-items: flex-start;
 
     overflow: scroll;
-    overflow-x: hidden;
+    overflow-x: hidden; 
 }
 
 .teamGroupsBlockDataGroups li {
@@ -890,6 +957,13 @@
 
     background: none;
     border: 0;
+    border-radius: 2rem;
+
+    transition: all 0.15s ease;
+}
+
+.teamGroupsBlockDataGroups button:hover {
+    box-shadow: 0 0 5px 1px #808080;
 }
 
 .dataGroupsName {
@@ -901,7 +975,7 @@
     color: #000;
 
     font-family: 'Inter', sans-serif;
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-style: normal;
     font-weight: 300;
     line-height: normal;
@@ -913,7 +987,7 @@
 .mentorshipBlock {
     display: flex;
     width: 39.823%;
-    height: 79.411%;
+    height: 335px;
     padding: 35px 4.5rem;
     flex-direction: column;
     align-items: flex-start;
@@ -935,7 +1009,7 @@
     color: #000;
     
     font-family: 'Inter', sans-serif;
-    font-size: 2.4rem;
+    font-size: 2rem;
     font-style: normal;
     font-weight: 600;
     line-height: normal;
@@ -944,6 +1018,7 @@
 .teamGroupsBlockInfo {
     display: flex;
     width: 100%;
+    height: 290px;
     justify-content: space-between;
     align-items: flex-start;
 }
@@ -951,7 +1026,7 @@
 .teamGroupsBlockInfoTitles {
     display: flex;
     width: 22.222%;
-    height: 225px;
+    height: 290px;
     margin-left: 1.5rem;
     flex-direction: column;
     align-items: flex-start;
@@ -970,7 +1045,7 @@
     color: #000;
     
     font-family: 'Inter', sans-serif;
-    font-size: 2.4rem;
+    font-size: 2rem;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
@@ -993,7 +1068,7 @@
     color: #000;
     
     font-family: 'Inter', sans-serif;
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-style: normal;
     font-weight: 300;
     line-height: normal;
@@ -1007,7 +1082,7 @@
     flex-direction: column;
     align-items: flex-start;
     width: 93.65%;
-    height: 180px;
+    height: 245px;
 
     margin: 0;
     padding-right: 2rem;
@@ -1036,13 +1111,100 @@
     color: #000;
 
     font-family: 'Inter', sans-serif;
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-style: normal;
     font-weight: 300;
     line-height: normal;
 
     overflow: hidden;
     white-space: nowrap;
+}
+
+.popUp {
+    width: 300px;
+    height: 140px;
+    padding: 35px 4.5rem;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: space-between;
+    gap: 15px;
+    flex-shrink: 0;
+    border-radius: 30px;
+    border: 3px solid #000;
+    background-color: #FFFFFF;
+}
+
+.popUpContent {
+    display: flex;
+    width: 100%;
+    height: 95%;
+    flex-direction: column;
+    justify-content: center;
+    flex-shrink: 0;
+    gap: 15px;
+    color: #000;
+
+    font-family: 'Inter', sans-serif;
+    font-size: 2.5rem;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+.popUpContent form {
+    display: flex;
+    /* width: 100%; */
+    height: 36px;
+    padding: 0 10px;
+    align-items: center;
+    gap: 10px;
+    flex-shrink: 0;
+    border-radius: 10px;
+    border: 2px solid #000;
+}
+
+.popUpContent form input {
+    width: 100%;
+    height: 32px;
+    border: none;
+    outline: none;
+    padding: 0;
+
+    font-family: 'Inter', sans-serif;
+    font-size: 2rem;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+}
+
+.popUpButtons {
+    display: flex;
+    width: 100%;
+    height: 40px;
+    flex-direction: row;
+    gap: 15px;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.popUpButtons button {
+    display: flex;
+    cursor: pointer;
+    width: 50%;
+    height: 40px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+
+    background: none;
+    border-radius: 10px;
+    border: 2px solid #000;
+
+    transition: all 0.15s ease;
 }
 
 /* footer section */
